# interface-sys

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: basic_interface_dll.c.EDE44F7120E7095C.idx  basic_interface_dll.h.38300580AB905210.idx  basic_interface_dll_cpp.cpp.621993863330E41D.idx  basic_interface_dll_cpp.h.860FC536B5F7BD65.idx  basic_test.cpp.7A8F640B19DBA4BD.idx  get_interface.c.14A9F2B75808A1AA.idx  get_interface_func.c.5825E019BFC43C69.idx  interface_sys.c.69B517129D9671B7.idx  interface_sys.h.EB8953FCE9FE308A.idx  load_module.c.37BBE0B08D4B8E25.idx  nonexistant_module.c.70C589AA2FEE375A.idx  run_interface_func.c.4D7BA3626D046603.idx
.github/workflows/: interface-sys.yml
examples/basic/dll/src/: ibasicinterface.c  interface_exports.c
examples/basic/exe/src/: main.c
examples/basic/include/: ibasicinterface.h
include/: interface_sys.h
src/: interface_sys.c
tests/: CMakeLists.txt  basic_interface_dll.c  basic_interface_dll.h  basic_interface_dll_cpp.cpp  basic_interface_dll_cpp.h  basic_test.cpp  get_interface.c  get_interface_func.c  load_module.c  nonexistant_module.c  run_interface_func.c
